# skia-external

./: BUILD.gn  CMakeLists.txt
gn/: BUILDCONFIG.gn  is_mingw.py
gn/skia/: BUILD.gn
gn/toolchain/: BUILD.gn
modules/: CMakeLists.txt
modules/skcms/src/: Transform_inl.h
modules/skshaper/: CMakeLists.txt
modules/skshaper/src/: SkShaper_harfbuzz.cpp
modules/svg/: CMakeLists.txt
src/base/: SkDebug.cpp
src/opts/: SkRasterPipeline_opts.h
src/ports/: SkScalerContext_win_dw.cpp  SkScalerContext_win_dw.h
tools/viewer/: ImGuiLayer.h  Viewer.cpp
tools/window/win/: RasterWindowContext_win.cpp
